<resources>
    <string name="app_name">Adventure Sharer</string>
    <string name="title_activity_maps">Map</string>
    <string name="paused">Paused</string>
    <string name="tracking">Tracking</string>

    <string name="distance_travelled">Distance Travelled (m):</string>

    <!-- Content Description -->
    <string name="login_background">Background Image</string>
    <string name="image_display">Image Display</string>
    <string name="button_image">Button Image</string>
    <string name="logo_small">Small Logo</string>

    <!-- Login and Sign Up Page Strings -->
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="no_account">Don\'t have an account? Click here</string>
    <string name="yes_account">Already have an account? Click here</string>

    <!-- Menu -->
    <string name="new_journey">New Journey</string>
    <string name="my_journeys">My Journeys</string>
    <string name="all_journeys">All Journeys</string>
    <string name="website">Website</string>

    <string name="logout">Log out</string>
</resources>
