<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <!-- Logo space-->
            <ImageView
                android:contentDescription="@string/login_background"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/logo_small"/>

            <!-- Allows the user to create a new route -->
            <Button
                android:id="@+id/button_new_route"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/new_journey"
                android:textColor="@android:color/white"
                android:background="@drawable/rounded_button"
                android:textAllCaps="false"/>

            <!-- Displays the current users routes -->
            <Button
                android:id="@+id/button_my_journeys"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/my_journeys"
                android:textColor="@android:color/white"
                android:background="@drawable/rounded_button"
                android:textAllCaps="false"/>

            <!-- Displays every users routes -->
            <Button
                android:id="@+id/button_all_journeys"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/all_journeys"
                android:textColor="@android:color/white"
                android:background="@drawable/rounded_button"
                android:textAllCaps="false"/>

            <!-- Button that takes user to the website -->
            <Button
                android:id="@+id/button_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/website"
                android:textColor="@android:color/white"
                android:background="@drawable/rounded_button"
                android:textAllCaps="false"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="end">

            <!-- Log out button -->
            <Button
                android:id="@+id/button_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:background="@drawable/rounded_button_red"
                android:textColor="@android:color/white"
                android:text="@string/logout"
                android:textAllCaps="false"/>

        </LinearLayout>

    </LinearLayout>





</android.support.constraint.ConstraintLayout>